--- a/pkg/ui/assets/style.css
+++ b/pkg/ui/assets/style.css
@@ -6,7 +6,7 @@
     --md-sys-color-on-primary-container: #001A41;
     --md-sys-color-secondary: #575E71;
     --md-sys-color-on-secondary: #FFFFFF;
-    --md-sys-color-secondary-container: #DUE2F9;
+    --md-sys-color-secondary-container: #D8E2F9;
     --md-sys-color-on-secondary-container: #141B2C;
     --md-sys-color-tertiary: #715573;
     --md-sys-color-on-tertiary: #FFFFFF;
@@ -22,6 +22,7 @@
     --md-sys-color-on-surface: #1B1B1F;
     --md-sys-color-surface-variant: #E1E2EC;
     --md-sys-color-on-surface-variant: #44474F;
+    --md-sys-color-surface-container-high: #ECE6F0;
     --md-sys-color-outline: #74777F;
     --md-sys-color-outline-variant: #C4C6D0;
     --md-sys-color-shadow: #000000;
